# octocoin

./: .gitignore  .travis.yml  COPYING  INSTALL  Makefile.am  README.md  RELEASE_NOTES_1_8.md  configure.ac
contrib/: README.md  bitcoind.bash-completion  octocoin-qt.pro  qt_translations.py  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  changelog  control  copyright  octocoin-qt.desktop  octocoin-qt.install  octocoin-qt.lintian-overrides  octocoin-qt.protocol  octocoind.bash-completion  octocoind.examples  octocoind.install  octocoind.lintian-overrides  octocoind.manpages  rules  watch
contrib/debian/examples/: bitcoin.conf
contrib/debian/manpages/: bitcoin-qt.1  bitcoin.conf.5  bitcoind.1
contrib/devtools/: README.md  fix-copyright-headers.py
contrib/gitian-descriptors/: README.md  deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-win.yml  qt-win.yml
contrib/gitian-downloader/: linux-download-config  win32-download-config
contrib/linearize/: example-linearize.cfg  linearize.py
contrib/macdeploy/: README.md  background.psd  fancy.plist  macdeployqtplus
contrib/pyminer/: README.md  pyminer.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py
contrib/verifysfbinaries/: verify.sh
qa/pull-tester/: build-tests.sh.in  pull-tester.py  pull-tester.sh  run-octocoind-for-test.sh.in
qa/rpc-tests/: README.md  conflictedbalance.sh  listtransactions.py  skeleton.py  txnmall.sh  util.py  util.sh  wallet.sh  walletbackup.sh
share/: setup.nsi.in  ui.rc
share/certs/: BitcoinFoundation_Apple_Cert.pem  BitcoinFoundation_Comodo_Cert.pem  PrivateKeyNotes.md
share/qt/: Info.plist.in  extract_strings_qt.py  make_windows_icon.sh
src/: .gitignore  Makefile.am  Makefile.include  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  base58.h  bignum.h  bloom.cpp  bloom.h  chainparams.cpp  chainparams.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  core.cpp  core.h  crypter.cpp  crypter.h  db.cpp  db.h  hash.h  init.cpp  init.h  key.cpp  key.h  keystore.cpp  keystore.h  leveldbwrapper.cpp  leveldbwrapper.h  limitedmap.h  main.cpp  main.h  (+51 more)
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/m4/: octocoin_find_bdb51.m4  octocoin_qt.m4  octocoin_subdir_to_include.m4
src/qt/: Makefile.am  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  monitoreddatamapper.cpp  monitoreddatamapper.h  notificator.cpp  notificator.h  octocoin.cpp  octocoin.qrc  octocoinaddressvalidator.cpp  octocoinaddressvalidator.h  octocoinamountfield.cpp  octocoinamountfield.h  octocoingui.cpp  octocoingui.h  octocoinstrings.cpp  octocoinunits.cpp  (+58 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: octocoin_ach.ts  octocoin_af_ZA.ts  octocoin_ar.ts  octocoin_be_BY.ts  octocoin_bg.ts  octocoin_bs.ts  octocoin_ca.ts  octocoin_ca@valencia.ts  octocoin_ca_ES.ts  octocoin_cmn.ts  octocoin_cs.ts  octocoin_cy.ts  octocoin_da.ts  octocoin_de.ts  octocoin_de_AT.ts  octocoin_el_GR.ts  octocoin_en.ts  octocoin_eo.ts  octocoin_es.ts  octocoin_es_CL.ts  octocoin_es_DO.ts  octocoin_es_MX.ts  octocoin_es_UY.ts  octocoin_et.ts  octocoin_eu_ES.ts  octocoin_fa.ts  octocoin_fa_IR.ts  octocoin_fi.ts  octocoin_fr.ts  octocoin_fr_CA.ts  octocoin_gl.ts  octocoin_gu_IN.ts  octocoin_he.ts  octocoin_hi_IN.ts  octocoin_hr.ts  octocoin_hu.ts  octocoin_id_ID.ts  octocoin_it.ts  octocoin_ja.ts  octocoin_ka.ts  (+31 more)
src/qt/res/: octocoin-qt-res.rc
src/qt/res/icons/: Thumbs.db  octocoin.hqx  octocoin.icns  update_spinner.mng
src/qt/test/: Makefile.am  test_main.cpp  uritests.cpp
src/test/: DoS_tests.cpp  Makefile.am  README  base58_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  main_tests.cpp  miner_tests.cpp  netbase_tests.cpp  rpc_wallet_tests.cpp  test_octocoin.cpp  util_tests.cpp  wallet_tests.cpp
